Ground work for arrays

--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -50,6 +50,7 @@
     <None Remove="Meta\Simple\SequenceGrammar.txt" />
     <None Remove="Meta\Simple\SubstractGrammar.txt" />
     <None Remove="Meta\SubstractGrammar.txt" />
+    <None Remove="Output\Identifiers\ConstantArrays.txt" />
     <None Remove="Output\Identifiers\Constants.txt" />
     <None Remove="Output\Identifiers\This.txt" />
   </ItemGroup>
@@ -75,6 +76,7 @@
     <EmbeddedResource Include="Meta\Simple\RepeatGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\SequenceGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\SubstractGrammar.txt" />
+    <EmbeddedResource Include="Output\Identifiers\ConstantArrays.txt" />
     <EmbeddedResource Include="Output\Identifiers\Constants.txt" />
     <EmbeddedResource Include="Output\Identifiers\This.txt" />
   </ItemGroup>
