Move test files

--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -50,9 +50,9 @@
     <None Remove="Meta\Simple\SequenceGrammar.txt" />
     <None Remove="Meta\Simple\SubstractGrammar.txt" />
     <None Remove="Meta\SubstractGrammar.txt" />
-    <None Remove="Output\Identifiers\ConstantArrays.txt" />
-    <None Remove="Output\Identifiers\Constants.txt" />
-    <None Remove="Output\Identifiers\This.txt" />
+    <None Remove="Output\ConstantArrays.txt" />
+    <None Remove="Output\Constants.txt" />
+    <None Remove="Output\This.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -76,9 +76,9 @@
     <EmbeddedResource Include="Meta\Simple\RepeatGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\SequenceGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\SubstractGrammar.txt" />
-    <EmbeddedResource Include="Output\Identifiers\ConstantArrays.txt" />
-    <EmbeddedResource Include="Output\Identifiers\Constants.txt" />
-    <EmbeddedResource Include="Output\Identifiers\This.txt" />
+    <EmbeddedResource Include="Output\ConstantArrays.txt" />
+    <EmbeddedResource Include="Output\Constants.txt" />
+    <EmbeddedResource Include="Output\This.txt" />
   </ItemGroup>
 
   <ItemGroup>
