--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -51,6 +51,7 @@
     <None Remove="Meta\Simple\SubstractGrammar.txt" />
     <None Remove="Meta\SubstractGrammar.txt" />
     <None Remove="Output\ConstantArrays.txt" />
+    <None Remove="Output\ConstantFunctions.txt" />
     <None Remove="Output\ConstantObjects.txt" />
     <None Remove="Output\Constants.txt" />
     <None Remove="Output\This.txt" />
@@ -78,6 +79,7 @@
     <EmbeddedResource Include="Meta\Simple\RepeatGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\SequenceGrammar.txt" />
     <EmbeddedResource Include="Meta\Simple\SubstractGrammar.txt" />
+    <EmbeddedResource Include="Output\ConstantFunctions.txt" />
     <EmbeddedResource Include="Output\ConstantObjects.txt" />
     <EmbeddedResource Include="Output\ThisArrays.txt" />
     <EmbeddedResource Include="Output\ConstantArrays.txt" />
