--- a/PasLibTest/PasLibTest.csproj
+++ b/PasLibTest/PasLibTest.csproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Meta\AdHoc\Bracket.txt" />
     <None Remove="Meta\AdHoc\Comments.txt" />
     <None Remove="Meta\AdHoc\Interleave.txt" />
     <None Remove="Meta\AdHoc\RepeatWithInterleaves.txt" />
@@ -56,6 +57,7 @@
     <None Remove="Output\ConstantFunctions.txt" />
     <None Remove="Output\ConstantObjects.txt" />
     <None Remove="Output\Constants.txt" />
+    <None Remove="Output\Constant\BracketSubstitution.txt" />
     <None Remove="Output\Constant\Constants.txt" />
     <None Remove="Output\Function\ConstantFunctions.txt" />
     <None Remove="Output\Identifier\This.txt" />
@@ -65,6 +67,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Meta\AdHoc\Bracket.txt" />
     <EmbeddedResource Include="Meta\AdHoc\Comments.txt" />
     <EmbeddedResource Include="Meta\AdHoc\Interleave.txt" />
     <EmbeddedResource Include="Meta\AdHoc\RepeatWithInterleaves.txt" />
@@ -87,6 +90,7 @@
     <EmbeddedResource Include="Meta\Simple\SubstractGrammar.txt" />
     <EmbeddedResource Include="Output\Array\ConstantArrays.txt" />
     <EmbeddedResource Include="Output\Array\ThisArrays.txt" />
+    <EmbeddedResource Include="Output\Constant\BracketSubstitution.txt" />
     <EmbeddedResource Include="Output\Constant\Constants.txt" />
     <EmbeddedResource Include="Output\Function\ConstantFunctions.txt" />
     <EmbeddedResource Include="Output\Identifier\This.txt" />
