--- a/api-pipeline.yaml
+++ b/api-pipeline.yaml
@@ -9,7 +9,7 @@ trigger:
 variables:
   chart-path: deployment/helm-chart/ParserAsServiceApi
   image-name:  vplauzon/pas-api
-  stages:
+  - stages:
     - stage:  build
       dependsOn:  []
       variables:
