--- a/api-pipeline.yaml
+++ b/api-pipeline.yaml
@@ -61,11 +61,17 @@ stages:
             command: package
             chartPath: '$(chart-path)'
             chartVersion: '$(full-version)'
+        # Copy files:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/utility/copy-files
+        - task: CopyFiles@2
+          inputs:
+            sourceFolder: deployment
+            contents: '**'
+            targetFolder: $(Build.ArtifactStagingDirectory)/deployment
         # Publish artefacts:  https://docs.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts
         - task: PublishBuildArtifacts@1
           displayName: 'Publish Artifact'
           inputs:
-            targetPath: deployment
+            targetPath: $(Build.ArtifactStagingDirectory)/deployment
             artifactName: deployment
   - stage: dev
     displayName: dev
