--- a/deploy-helm.yaml
+++ b/deploy-helm.yaml
@@ -26,3 +26,23 @@ jobs:
               scriptType:  'bash'
               scriptLocation: 'scriptPath'
               scriptPath:  $(Pipeline.Workspace)/deployment/deployment/get-deploy-colour.sh
+          # Bash script:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/utility/bash
+          - task: Bash@3
+            displayName:  Fetch Full Version
+            inputs:
+              targetType: filePath
+              filePath:  $(Pipeline.Workspace)/deployment/deployment/retrieve-full-version.sh
+              workingDirectory:  $(Pipeline.Workspace)/deployment/deployment
+          # Helm deploy:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/deploy/helm-deploy
+          - task: HelmDeploy@0
+            displayName: Helm Deploy
+            inputs:
+              azureSubscriptionEndpoint: shared-infra
+              azureResourceGroup: '$(statelessRgPrefix)-$(colour)-${{ parameters.environment }}'
+              kubernetesCluster: $(clusterPrefix)-$(colour)-${{ parameters.environment }}
+              command: upgrade
+              install:  true
+              chartName:  '???'
+              releaseName:  pas-api
+              arguments: --wait
+              timeoutInMinutes: 2
