--- a/deploy-helm.yaml
+++ b/deploy-helm.yaml
@@ -43,7 +43,7 @@ jobs:
               kubernetesCluster: $(clusterPrefix)-$(colour)-${{ parameters.environment }}
               command: upgrade
               install:  true
-              chartName:  $(chart-path)-$(full-version)
+              chartName:  $(Pipeline.Workspace)/deployment/deployment/$(chart-path)-$(full-version)
               releaseName:  pas-api
               arguments: --wait
               timeoutInMinutes: 2
