--- a/deploy-helm.yaml
+++ b/deploy-helm.yaml
@@ -57,5 +57,5 @@ jobs:
               releaseName:  pas-api
               arguments: --wait
               overrideValues: applicationInsights.instrumentationKey=$(instrumentationKey)
-              valueFile:  $(Pipeline.Workspace)/deployment/deployment/values-${{ parameters.environment }}-$(colour)
+              valueFile:  $(Pipeline.Workspace)/deployment/deployment/values-${{ parameters.environment }}-$(colour).yaml
               timeoutInMinutes: 2
