--- a/deploy-helm.yaml
+++ b/deploy-helm.yaml
@@ -14,6 +14,8 @@ jobs:
       runOnce:
         deploy:
           steps:
+          # Don't checkout repo
+          - checkout: none
           # Download artifact:  https://docs.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts#downloading-artifacts
           - task: DownloadPipelineArtifact@2
             displayName:  Download artefact
