--- a/deployment/values-dev-blue.yaml
+++ b/deployment/values-dev-blue.yaml
@@ -1,2 +1,2 @@
-host1:  pas-api.dev.vplauzon.com
-host2:  pas-api.blue.dev.vplauzon.com
+host1:  pas-api.dev.vincentlauzon.com
+host2:  pas-api.blue.dev.vincentlauzon.com
