--- a/helm-build.yaml
+++ b/helm-build.yaml
@@ -6,7 +6,7 @@ parameters:
 jobs:
   - deployment:  ${{ parameters.deploymentName }}
     displayName: ${{ parameters.deploymentDisplayName }}
-    environment:  ''
+    environment:  build
     pool:
       vmImage: 'ubuntu-latest'
     variables: []
