--- a/helm-build.yaml
+++ b/helm-build.yaml
@@ -11,7 +11,7 @@ jobs:
       vmImage: 'ubuntu-latest'
     variables:
       chart-root: deployment/helm-chart
-      chart-path: '$(chart-root)/${{ chartName }}'
+      chart-path: '$(chart-root)/${{ parameters.chartName }}'
     strategy:
       runOnce:
         deploy:
@@ -43,7 +43,7 @@ jobs:
           - task: Docker@2
             displayName: Build and push Docker Image
             inputs:
-              repository: ${{ imageName }}
+              repository: ${{ parameters.imageName }}
               command:  buildAndPush
               Dockerfile: '**/Dockerfile'
               buildContext:  $(Build.ArtifactStagingDirectory)
