--- a/helm-build.yaml
+++ b/helm-build.yaml
@@ -37,7 +37,7 @@ jobs:
             inputs:
               command: publish
               publishWebProjects: True
-              arguments: --configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)
+              arguments: --configuration $(BuildConfiguration) --output build-output
               zipAfterPublish: True
           # Build Docker:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/build/docker#build-and-push
           - task: Docker@2
@@ -46,7 +46,6 @@ jobs:
               repository: ${{ parameters.imageName }}
               command:  buildAndPush
               Dockerfile: '**/Dockerfile'
-              buildContext:  $(Build.ArtifactStagingDirectory)
               tags: '$(full-version)'
           # Helm tool installer:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/tool/helm-installer
           - task: HelmInstaller@1
