--- a/helm-build.yaml
+++ b/helm-build.yaml
@@ -30,7 +30,7 @@ jobs:
             inputs:
               command: test
               projects: '**/*UnitTest*/*.csproj'
-              arguments: -c release --configuration $(BuildConfiguration)
+              arguments: --configuration $(BuildConfiguration)
           # .NET Core publish:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/build/dotnet-core-cli#publish
           - task: DotNetCoreCLI@2
             displayName: 'Build / Publish'
